--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
+atomicwrites==1.2.1
+attrs==18.2.0
 Django==2.1.1
 django-filter==2.0.0
 djangorestframework==3.8.2
 djangorestframework-jsonapi==2.6.0
 inflection==0.3.1
+mock==2.0.0
+more-itertools==4.3.0
+pathlib2==2.3.2
+pbr==5.1.0
+pluggy==0.8.0
+py==1.7.0
+pytest==3.9.3
 pytz==2018.5
+selenium==3.141.0
 six==1.11.0
+urllib3==1.24.1
